# Sonda

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Lora_receiver/: Lora_receiver.ino  images.h  rtos.ino  utils.cpp  utils.h
Sonda/: Sonda.ino  adc.cpp  adc.h  sd_card_utils.cpp  sd_card_utils.h  thermistor.cpp  thermistor.h
components/components/mbedtls/mbedtls/visualc/VS2010/: load_roots.vcxproj  mbedTLS.sln
components/lora/: lora.c
main/: CMakeLists.txt  main.c  main.cpp
main/libs/: SD_utils.cpp  SD_utils.h  adc.c  adc.cpp  adc.h  pH.c  pH.h  sd.c  sd.h  tds.c  tds.h  thermistor.c  thermistor.h  turbidity.c  turbidity.h
tests/: sd_test.ino
